--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
   <!--<script src="http://code.jquery.com/jquery-1.9.0.min.js" type="text/javascript"></script>-->
-  <script src="https://raw.github.com/danpalmer/jquery.complexify.js/master/jquery.complexify.js"></script>
+  <!--<script src="https://raw.github.com/danpalmer/jquery.complexify.js/master/jquery.complexify.js"></script>-->
 
 </body>
 
